@@ -1,5 +1,6 @@
 2022-08-20 Hannes von Haugwitz  <hannes@vonhaugwitz.com>
 	* Fix some compiler warnings
+	* Handle read/write errors in parent/child communication
 
 2022-08-13 Hannes von Haugwitz <hannes@vonhaugwitz.com>
 	* Support multithreading for hashsum calculation (closes: #12)
